# JianZhai

./: .claudeignore  .gitignore  CLAUDE.md  README.md  Test.html  docker-compose.yml  workflow.html
backend/: .env.example  conftest.py  manage.py  pyproject.toml
backend/apps/accounts/: avatar.py  captcha.py  hero.py  models.py  permissions.py  scoping.py  signals.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_userprofile.py  0002_herosettings.py  0003_split_quote_attribution.py  0004_add_quote_dynasty.py  0005_add_hero_play_order.py  0006_demote_nonroot_superusers.py  0007_usertag.py  0008_readgrant.py
backend/apps/accounts/tests/: test_captcha.py  test_hero.py  test_login_gate.py  test_read_grants.py  test_roles.py  test_user_management.py  test_user_tags.py
backend/apps/ai/: apps.py  models.py  pricing.py  prompts.py  services.py  urls.py  views.py
backend/apps/ai/migrations/: 0001_initial.py  0002_aiusagelog.py  0003_aiconversation_aiprompttemplate_and_more.py  0004_aiusagelog_estimated_usd.py
backend/apps/ai/tests/: test_pricing.py  test_services.py  test_settings_cache_and_cost.py  test_templates_and_chat.py  test_views_validation.py
backend/apps/blog/: apps.py  serializers.py  urls.py  views.py
backend/apps/blog/tests/: test_primary_attachment.py  test_public_cache.py  test_soft_delete_leak.py
backend/apps/comments/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/comments/migrations/: 0001_initial.py
backend/apps/comments/tests/: test_comments_nplus1.py
backend/apps/editor/: admin.py  apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/editor/migrations/: 0001_initial.py  0002_slideimage.py  0003_slideimage_thumbnail.py  0004_slideimage_notes.py
backend/apps/editor/services/: docx_import.py  html_asset_mirror.py  image_mirror.py  link_preview.py  local_image_assets.py
backend/apps/editor/tests/: test_docx_import.py  test_html_asset_mirror.py  test_image_mirror.py  test_import_options.py  test_link_preview.py  test_local_image_assets.py  test_pptx_import.py
backend/apps/exporter/: admin.py  anthology_tree.py  apps.py  models.py  scope.py  serializers.py  tasks.py  urls.py  views.py
backend/apps/exporter/migrations/: 0001_initial.py  0002_exporttask_selection_alter_exporttask_scope.py
backend/apps/exporter/services/: card_placeholders.py  common.py  diagram_render.py  docx_export.py  html_export.py  markdown_export.py  markdown_preprocess.py  markdown_render.py  (+3 more)
backend/apps/knowledge/: admin.py  audience.py  concurrency.py  html_content.py  models.py  serializers.py  structure.py  templates.py  trash_views.py  urls.py  views.py
backend/apps/linking/: admin.py  apps.py  models.py  parser.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/search/: apps.py  services.py  signals.py  tasks.py  views.py
backend/apps/tags/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/versioning/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/jianzhai/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
backend/tests/: test_security_fixes.py
(+438 files in other folders)
