[project]
name = "jianzhai-backend"
version = "0.1.0"
description = "简斋 / JianZhai backend — Django 5 + DRF"
requires-python = ">=3.12"
dependencies = [
    # Web
    "Django>=5.2,<5.3",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "django-filter>=24.3",
    # Database
    "psycopg[binary]>=3.2",
    "dj-database-url>=2.2",
    # Async / queue
    "celery>=5.4",
    "redis>=5.0",
    "django-redis>=5.4",
    # Content
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "pygments>=2.17",
    "python-docx>=1.1",
    "mammoth>=1.8",
    "markdownify>=0.13",
    "jieba>=0.42.1",
    "Pillow>=10.4",
    "Jinja2>=3.1",
    # Misc
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-django>=4.9",
    "ruff>=0.6",
    "black>=24.8",
    "isort>=5.13",
]
pdf = [
    "playwright>=1.46",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["jianzhai*", "apps*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "DJ"]
ignore = ["E501"]  # line length handled by black

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "jianzhai.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
